@@ -123,6 +123,14 @@ rpmte_R(rpmteObject * s)
 
 /*@null@*/
 static PyObject *
+rpmte_D(rpmteObject * s)
+	/*@*/
+{
+    return Py_BuildValue("s", rpmteD(s->te));
+}
+
+/*@null@*/
+static PyObject *
 rpmte_A(rpmteObject * s)
 	/*@*/
 {
@@ -345,6 +353,9 @@ static struct PyMethodDef rpmte_methods[] = {
     {"R",	(PyCFunction)rpmte_R,		METH_NOARGS,
 "te.R() -> R\n\
 - Return element release.\n" },
+    {"D",	(PyCFunction)rpmte_D,		METH_NOARGS,
+"te.D() -> D\n\
+- Return element distepoch.\n" },
     {"A",	(PyCFunction)rpmte_A,		METH_NOARGS,
 "te.A() -> A\n\
 - Return element arch.\n" },
